feat(agent): the delegation records Artifacts on the task, and renders private ones as descriptors (Phase 3, step 6)
LocalExecutor.StepResult is gone; every result a delegation produces is an
Artifact on the task's store, numbered task-wide. $3 now means one thing to
the local executor's ledger, the cloud's descriptor and the events row, and a
later delegation can forward what an earlier one produced — the reference
mechanism, the repeat guard and the transcript ledger all run over the task's
list unchanged, which mechanically closes the cross-delegation double send
that the ALREADY DONE header was papering over (the header stays).

Each result is labelled at record time from the facts at hand: the skill
declared credentials, the task carries attachments, an argument references a
private artifact, or an earlier step of this delegation was private — the
taint. Once the local model has read private content, everything it writes
afterwards may carry it, a public tool's arguments included, so every later
step of that delegation is private too. One boolean.

What the cloud reads of a delegation changes only where a result is PRIVATE:
the consolidated body shows its descriptor in place of its bytes, the ledger
says how many characters were withheld and how to forward them by reference,
a failed private step shows its descriptor rather than its traceback, and the
local model's own summary is withheld — it is a paraphrase of what it read,
and a paraphrase is the one thing the canary cannot see. All-public
delegations, which is both of today's scheduled tasks, read exactly as before.

Two things kept apart that used to be one: what the model WROTE (references
intact) and what actually RAN (references substituted). The guards compare
what ran, as they did; only what was written is ever printed, because the
resolved map carries the substituted bytes of whatever $N pointed at.

The local tier keeps full access. A reference into a PRIVATE artifact still
resolves: private means w